Fixed the background so that there was not a 21px gap at the bottom.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@ img.bg {
 
   /* Set up positioning */
   position: fixed;
-  top: -21px;
+  top: 0px;
   left: 0;
   z-index: -1;
   /* opacity: 0.85; */
